python/test-data/testTypesProtos6.err
Traceback (most recent call last):
  File "test-data/testTypesProtos6.py", line 56, in <module>
    print(computeTotalSize(root))
  File "test-data/testTypesProtos6.py", line 49, in computeTotalSize
    fs.accept(visitor)
  File "test-data/testTypesProtos6.py", line 18, in accept
    visitor.visitDirectory(self)
  File "test-data/testTypesProtos6.py", line 40, in visitDirectory
    c.accept(self)
  File "test-data/testTypesProtos6.py", line 27, in accept
    visitor.visitFile(self)
WyppTypeError: File does not implement parent FileSystemEntry
given:    <__wypp__.File object at 0x00>
expected: value of type FileSystemEntry

context: getChildren(self: Self) -> list[FileSystemEntry]
                                    ^^^^^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesProtos6.py:15
caused by: test-data/testTypesProtos6.py:16
  |         return self.__children[:]

TotalSizeVisitor does not implement parent FileSystemVisitor
Argument visitor of method accept violates the type declared by the parent FileSystemEntry.
Annotation FileSystemVisitor is incompatible with the parent's annotation FileSystemVisitor.

given:    <__wypp__.TotalSizeVisitor object at 0x00>
expected: value of type FileSystemVisitor

context: accept(self: Self, visitor: FileSystemVisitor) -> None
                                     ^^^^^^^^^^^^^^^^^
declared at: test-data/testTypesProtos6.py:26
declared at: test-data/testTypesProtos6.py:8
caused by: test-data/testTypesProtos6.py:26
  |     def accept(self, visitor: FileSystemVisitor):

Argument file of method visitFile violates the type declared by the parent FileSystemVisitor.
Annotation str is incompatible with the parent's annotation File.

given:    <__wypp__.File object at 0x00>
expected: value of type str

context: visitFile(self: Self, file: str) -> None
                                     ^^^
declared at: test-data/testTypesProtos6.py:41
declared at: test-data/testTypesProtos6.py:32
caused by: test-data/testTypesProtos6.py:41
  |     def visitFile(self, file: str):
